# src/api/auth/refresh/index.ts
@@ -1,22 +1,12 @@
 /* eslint-disable */
+import type * as Types from '../../@types'
+
 export type Methods = {
   /** リフレッシュトークンをもとに、新しいIDトークンとリフレッシュトークンを発行します。 */
   post: {
     status: 200
-
     /** OK */
-    resBody: {
-      /** 新しいIDトークン */
-      idToken: string
-      /** 新しいリフレッシュトークン */
-      refreshToken: string
-      /** 新しいIDトークンの有効期限 */
-      expiresIn: string
-    }
-
-    reqBody: {
-      /** リフレッシュトークン */
-      refreshToken: string
-    }
+    resBody: Types.RefreshedToken
+    reqBody: Types.RefreshTokenRequest
   }
 }
