# src/api/hello/index.ts
@@ -1,13 +1,11 @@
 /* eslint-disable */
+import type * as Types from '../@types'
+
 export type Methods = {
   /** Hello, World!を返します。 */
   get: {
     status: 200
-
     /** OK */
-    resBody: {
-      /** Hello, World! */
-      message: string
-    }
+    resBody: Types.Messages
   }
 }
